# RxEx

./: .env.example  .gitignore  ADDING_NEW_MIND_TYPES.md  README.md  docker-compose.yml  seed_data_complete_fixed.sh  seed_data_simple.sh
backend/: Dockerfile  SETUP_MIND_SYSTEM.md  TEST_FIXES_SUMMARY.md  fix_status_refs.py  pyproject.toml  run_test_check.py  run_tests.sh  run_unit_tests.sh  test_import.py  test_uuid_storage.py  verify_enum_fix.py  verify_mind_types.py  verify_response_schemas.py  verify_schemas.py
backend/scripts/: init_schema.py  skills_backup.json
backend/src/: app.py  exceptions.py  logging_config.py
backend/src/config/: config.py
backend/src/database/: schema.py
backend/src/models/: __init__.py  enums.py  mind.py  mind_types.py
backend/src/routes/: chat.py  fmea.py  graphrag.py  minds.py  relationships.py  schedules.py
backend/src/schemas/: chat.py  graphrag.py  mind_generic.py  minds.py
backend/src/services/: __init__.py  ai_chat_service.py  community_detector.py  embedding_service.py  fmea_report_service.py  graphrag_retriever.py  knowledge_store.py  mind_service.py  scheduler_service.py
backend/src/websocket/: manager.py
backend/tests/: README.md  conftest.py  test_config.py  test_database_setup.py  test_graphrag_retriever.py  test_logging_config.py
backend/tests/integration/: test_complete_api_flows.py  test_minds_api.py  test_schema_validations.py
backend/tests/properties/: __init__.py  conftest.py  test_mind_properties.py
backend/tests/smoke/: __init__.py  test_crud_operations.py  test_mind_creation.py  (+1 more)
docs/: AI.md  (+4 more)
(+75 files in other folders)
