[project]
name = "fastapi-neo4j"
version = "0.1.0"
description = "A simple starter for building RESTful APIs with FastAPI and NEO4J."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "neo4j>=5.28.2",
    "neontology>=2.1.0",
    "networkx>=3.6.1",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "pytest-cov>=7.0.0",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.10",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.8.0",
    "ty>=0.0.21",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[[tool.ty.overrides]]
include = [
    "tests/properties/**",
    ".venv/**",
    "**/src/app.py",
    "**/src/routes/minds.py",
    "**/src/services/mind_service.py"
]

[tool.ty.overrides.rules]
missing-argument = "ignore"
unsupported-operator = "ignore"
invalid-argument-type = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
